--- a/css/styles.css
+++ b/css/styles.css
@@ -1347,3 +1347,110 @@ main {
   font-weight: bold;
   text-decoration: underline;
 }
+
+/* Sobre el Hotel */
+
+.contiene_historias {
+  font-family: "Nunito", sans-serif;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  justify-content: space-evenly;
+  top: 10vw;
+  gap: 24px;
+  height: fit-content;
+  margin-bottom: 16%;
+}
+.cuadros_empleados {
+  padding: 16px;
+  width: min(90%, 280px);
+  height: 600px;
+  gap: 40px;
+  background: var(--color-principal);
+  border-radius: 40px;
+}
+.linea_horizontal {
+  display: block;
+  margin: auto;
+  background-color: var(--color-resaltador);
+  width: 80%;
+  height: 6px;
+  position: relative;
+  top: 92%;
+}
+.foto_empleado {
+  align-items: center;
+  border-radius: 50%;
+  width: 100%;
+  height: 126px;
+  margin-bottom: 24px;
+  margin-top: 12px;
+}
+.foto_empleado img {
+  border-radius: 50%;
+  width: 126px;
+  height: 126px;
+  display: block;
+  margin: auto;
+}
+
+.historia_empleado h4 {
+  margin-bottom: 14px;
+}
+.historia_empleado p,
+.historia_empleado h4 {
+  text-align: center;
+  font-size: clamp(13.6px, 4vw + 1rem, 16px);
+}
+
+.descripcion_historias {
+  display: flex;
+  margin: auto;
+  width: 100%;
+  font-style: italic;
+  color: gray;
+  justify-content: center;
+  margin-bottom: 10%;
+}
+.contiene_descripcion_h {
+  display: block;
+  margin: auto;
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+}
+.descripcion_historias p {
+  justify-content: center;
+  font-size: clamp(13.6px, 4vw + 1rem, 16px);
+}
+.contiene_tit_hist {
+  flex-wrap: wrap;
+  position: relative;
+  top: 10vw;
+  height: 150px;
+  position: relative;
+  text-align: center;
+  justify-content: center;
+}
+.titulo_historias {
+  inset: 0;
+  margin: auto;
+  text-align: center;
+  color: #06090e;
+  font-weight: bold;
+  font-size: 36px;
+  font-size: clamp(27px, 4vw + 1rem, 40px);
+}
+
+@media (max-width: 600px) {
+  .cuadros_empleados {
+    width: 90%;
+  }
+
+  .descripcion_historias {
+    padding: 40px;
+    left: 10%;
+    text-align: center;
+  }
+}
