--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
+  overflow-x: clip;
 }
 
 hr {
@@ -195,11 +196,12 @@ footer {
 }
 
 .principal__title {
-  width: 35%;
-  font-size: 6rem;
+  width: 37%;
+  font-size: 5rem;
   font-family: "Old Standard TT", serif;
   font-weight: lighter;
   color: white;
+  margin-bottom: 20px;
 }
 
 .principal__link {
@@ -275,6 +277,10 @@ footer {
 .information__img {
   width: 40%;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
+.rooms__img {
+  width: 100%;
 }
 
 .rooms__title {
