--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,7 @@ footer {
   background-color: var(--color-terciario);
   font-family: "Nunito", sans-serif;
   padding: 2rem;
-  background-image: url(../media/backgrounds/cartographer.png);
+  background-image: url(../media/backgrounds/cartographer.webp);
   background-attachment: fixed;
   margin-bottom: 100px;
 }
@@ -431,7 +431,7 @@ footer {
 
 .services {
   background-color: var(--color-terciario);
-  background-image: url(../media/backgrounds/cartographer.png);
+  background-image: url(../media/backgrounds/cartographer.webp);
   background-attachment: fixed;
   padding: 4rem 2rem;
   text-align: center;
@@ -722,7 +722,7 @@ footer {
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0)
     ),
-    url(../media/backgrounds/rooms.png);
+    url(../media/backgrounds/rooms.webp);
   background-size: cover;
   background-attachment: fixed;
 
@@ -2066,7 +2066,7 @@ button {
 }
 
 .evento__imagen-principal {
-  background-image: url("../media/events/fondo.jpeg");
+  background-image: url("../media/events/fondo.webp");
   background-size: cover;
   background-position: center;
   height: 450px;
@@ -2191,7 +2191,7 @@ button {
 }
 
 .eventos__especial--madre {
-  background-image: url("../media/events/dia-madre-fondo.avif");
+  background-image: url("../media/events/dia-madre-fondo.webp");
   overflow: visible;
   position: relative;
   z-index: 3;
