--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,7 @@ footer {
   background-color: var(--color-terciario);
   font-family: "Nunito", sans-serif;
   padding: 2rem;
-  background-image: url(../media/backgrounds/cartographer.webp);
+  background-image: url(../media/backgrounds/cartographer.png);
   background-attachment: fixed;
   margin-bottom: 100px;
 }
@@ -885,10 +885,89 @@ button {
   border: 2px solid var(--color-resaltador);
   color: var(--color-terciario);
   animation: neon-pulse 2s infinite;
+  font-weight: bold;
+}
+
+.modal__comodidades {
+  font-family: "Nunito", sans-serif;
+  display: none;
+  position: fixed;
+  top: 30%;
+  width: fit-content;
+  height: 300px;
+  margin: auto;
+  padding: 2rem 2rem;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  align-items: center;
+  border: 1px solid var(--color-resaltador);
+  border-radius: 15px;
+  z-index: 1000;
+  background-color: #dddddd;
+}
+
+/* Contenido del modal */
+.modal__contenido {
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 15px;
+  max-width: 500px;
+  width: 90%;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+  position: relative;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal__cerrar {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #202020;
+  transition: color 0.2s;
+}
+.modal__cerrar:hover {
+  color: red;
+}
+
+/* Lista de comodidades */
+.modal__lista {
+  list-style: none;
+  padding: 0;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
+  height: 300px;
+}
+
+.modal__lista li {
+  background-color: #f5f5f5;
+  margin-bottom: 0.8rem;
+  padding: 0.8rem 1rem;
+  border-left: 4px solid #00bcd4;
+  border-radius: 5px;
+  font-weight: 500;
+  color: #333;
 }
 
 .neon-pulse:hover {
   border-color: var(--color-principal);
+}
+
+@keyframes fadeIn {
+  from {
+    transform: scale(0.95);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 @keyframes neon-pulse {
@@ -1911,18 +1990,6 @@ button {
 }
 
 /* Menu */
-.menu-modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.6);
-  justify-content: center;
-  align-items: center;
-  z-index: 10000;
-}
 
 .menu-modal__content {
   position: relative;
